--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ jsonpointer==2.1
 kiwisolver==1.3.1
 m3u8downloader==0.10.0
 matplotlib==3.2.2
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
+mkl-fft
+mkl-random
+mkl-service
 munkres==1.1.4
 natsort==7.0.1
 numpy==1.19.1
@@ -39,7 +39,7 @@ terminaltables==3.1.0
 timm==0.1.20
 torch==1.7.1
 torchfile==0.1.0
-torchvision==0.8.0a0
+torchvision
 tornado==6.1
 tqdm==4.61.1
 typing-extensions==3.10.0.0
